--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.9.0
 appnope==0.1.4
+arcosparse==0.4.0
 argon2-cffi==23.1.0
 argon2-cffi-bindings==21.2.0
 arrow==1.3.0
@@ -11,8 +12,8 @@ attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
 bleach==6.2.0
-boto3==1.38.8
-botocore==1.38.8
+boto3==1.38.10
+botocore==1.38.10
 certifi==2025.4.26
 cffi==1.17.1
 charset-normalizer==3.4.2
@@ -20,7 +21,7 @@ click==8.1.8
 cloudpickle==3.1.1
 comm==0.2.2
 contourpy==1.3.2
-copernicusmarine==2.0.1
+copernicusmarine==2.1.0
 crc32c==2.7.1
 cycler==0.12.1
 dask==2025.4.1
@@ -47,7 +48,7 @@ importlib_metadata==8.7.0
 ipykernel==6.29.5
 ipython==9.2.0
 ipython_pygments_lexers==1.1.1
-ipywidgets==8.1.6
+ipywidgets==8.1.7
 isoduration==20.11.0
 jedi==0.19.2
 Jinja2==3.1.6
@@ -62,10 +63,10 @@ jupyter_client==8.6.3
 jupyter_core==5.7.2
 jupyter_server==2.15.0
 jupyter_server_terminals==0.5.3
-jupyterlab==4.4.1
+jupyterlab==4.4.2
 jupyterlab_pygments==0.3.0
 jupyterlab_server==2.27.3
-jupyterlab_widgets==3.0.14
+jupyterlab_widgets==3.0.15
 kiwisolver==1.4.8
 locket==1.0.0
 lxml==5.4.0
@@ -79,9 +80,9 @@ nbconvert==7.16.6
 nbformat==5.10.4
 nest-asyncio==1.6.0
 networkx==3.4.2
-notebook==7.4.1
+notebook==7.4.2
 notebook_shim==0.2.4
-numcodecs==0.11.0
+numcodecs==0.16.0
 numpy==1.26.4
 overrides==7.7.0
 packaging==25.0
@@ -97,6 +98,7 @@ prompt_toolkit==3.0.51
 psutil==7.0.0
 ptyprocess==0.7.0
 pure_eval==0.2.3
+pyarrow==20.0.0
 pycparser==2.22
 pydantic==2.11.4
 pydantic_core==2.33.2
@@ -141,5 +143,5 @@ websocket-client==1.8.0
 widgetsnbextension==4.0.14
 wrapt==1.17.2
 xarray==2025.4.0
-zarr==2.13.3
+zarr==3.0.7
 zipp==3.21.0
